# deepseek-api

./: .linelint.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
deep-seek-api/: Cargo.toml
deep-seek-api/src/: completions.rs  error.rs  json_stream.rs  lib.rs  options.rs  request.rs  response.rs  types.rs
deepseek-api/: Cargo.toml
deepseek-api/src/: builder.rs  client_builder.rs  completions.rs  error.rs  json_stream.rs  lib.rs  request.rs  request_builder.rs  response.rs
deepseek-api/src/async_impl/: client.rs  completions.rs  error.rs  json_stream.rs  mod.rs
deepseek-api/src/sync_impl/: client.rs  completions.rs  error.rs  json_stream.rs  mod.rs
ds-cli/: Cargo.toml
ds-cli/src/: chat_history.rs  main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/chat-stream/: Cargo.toml
examples/chat-stream/src/: main.rs
examples/deep-think/: Cargo.toml
examples/deep-think/src/: main.rs
examples/ds-cli/: Cargo.toml
examples/ds-cli/src/: chat_history.rs  main.rs
examples/fim/: Cargo.toml
examples/fim/src/: main.rs
examples/function-call/: Cargo.toml
examples/function-call/src/: main.rs
examples/sync-basic/: Cargo.toml
examples/sync-basic/src/: main.rs
examples/talk-tui/: Cargo.toml
examples/talk-tui/src/: main.rs
