[package]
name = "seep_seek_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow="1.0.95"
reqwest = {version="0.12.12", features = ["json"]}
reqwest-middleware = {version="0.4", features = ["json"]}
reqwest-retry = "0.7"
schemars = "0.8.21"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"


[features]
