[package]
name = "seep_seek_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
anyhow="1.0.95"
reqwest = {version="0.12.12", features = ["json", "stream"]}
schemars = "0.8.21"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
tokio-util = {version = "0.7.13", features=["io-util"]}
futures-util = "0.3.31"