[package]
name = "deepseek-api"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["hunjixin"]
license = "MIT"
description = "DeepSeek API SDK is a powerful Rust client library for interacting with the DeepSeek service"
repository = "https://github.com/hunjixin/deepseek-api"
readme = "README.md"
keywords = ["deepseek", "api", "rust"]
categories = ["development-tools"]


[dependencies]
cfg-if = "1.0"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
anyhow="1.0.95"
reqwest = {version="0.12.12", features = ["json", "stream", "blocking"]}
schemars = "0.8.21"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = {version = "0.1.17", features = ["io-util"]}
async-stream = "0.3.6"
tokio-util = {version = "0.7.13", features=["io-util"]}
futures-util = "0.3.31"

[dev-dependencies]
bytes = "1.0.0"
http = "1.2.0"

[features]
default = []
is_sync = [ ]
