[package]
name = "deepseek-api"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["hunjixin"]
license = "MIT"
description = "DeepSeek API SDK is a powerful Rust client library for interacting with the DeepSeek service"
repository = "https://github.com/hunjixin/deepseek-api"
readme = "../README.md"
keywords = ["deepseek", "api", "rust"]
categories = ["api-bindings", "asynchronous"]


[dependencies]
cfg-if = "1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = "1.0.95"
schemars = "0.8.21"

reqwest = { version = "0.12.15", features = ["json", "stream"], optional = true }
futures-util = {version = "0.3", features =["io"], optional = true}

[dev-dependencies]
bytes = "1.0.0"
http = "1.2.0"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = ["is_async"]
is_async = [
    "reqwest",         
    "futures-util"
]

is_sync = [
    "reqwest/blocking"
]
