[package]
name = "function-call"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow="1.0.95"
schemars = "0.8.21"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
deepseek-api = {path="../../deepseek-api",  default-features=false,  features = ["is_async"]}
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
