[package]
name = "talk_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow="1.0.95"
ratatui= "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
tui-input = "0.11.1"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
seep_seek_api = {path="../../deep-seek-api"}
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }