[package]
name = "talk-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow="1.0.95"
ratatui= {version = "0.29.0", features = ["unstable-rendered-line-info"]}
color-eyre = "0.6.3"
crossterm = "0.28.1"
textwrap = "0.16"
tui-input = "0.11.1"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
deepseek-api = {path="../../deepseek-api", features = ["is_sync"]}
clap = { version = "4.1.11", features = ["derive"] }
